Oph 862 create diagram detail page (#176)
* refactor: models are updated + new list & listItem model

Refs: oph-860

* feat: can replace a diagram of an existing process

Refs: oph-860

* Oph-763 | Upload multiple diagrams (#165)

* feat: create new page where we show all diagrams

Refs: oph-861

* feat: create file viewer + metadata-card component

Refs: oph-861

* feat: show table with diagram files in diagram-list

Refs: oph-861

* feat: make the title of the diagram file in the diagram-list clickable

Refs: oph-861

* feat: show a lock on older versions and you can only edit the current one

Refs: oph-861

* refactor: remove tests that are not used

Refs: oph-861

* refactor: creating a new process can now be done with multiple diagram files

Refs : oph-763

* refactor: update diagrams on a process (vervang) is also possible

This with the bug that the latest diagram is not loaded in the viewer without a refresh

Refs: oph-763

* fix: the sorting of the diagram lists

Refs: oph-763

* fix: diagram file not loaded on process page because of filtering

Refs: oph-763

* fix: when removed a file from the list it will re open the lists first diagramfile

Refs: oph-763

* fix: the showcased file is the same as the first on the diagram list overview page (by position)

Refs: oph-763

* fix: fetch latest list when upload is done

Refs: ph-763

* refactor: extract the bpmn elements again on upload of files

Refs: oph-763

* Oph-781 | Add tabs for multiple diagrams (#168)

* feat: create component to show the diagrams in tabs

Refs: oph-781

* refactor: diagrams page to use the new custom diagram classes

Refs: oph-781

* refactor: use the diagrams as tabs component instead of process:visual on process detail page

Refs: oph-781

* feat: make the scrollbar thinner

Refs: oph-781

* refactor: move the header out of the diagrams as tabs component

Refs: oph-781

* refactor: make breadcrum of diagrams page "diagrammen"

Refs: oph-781

* fix: linting issue in pipeline => comm

--- a/app/components/diagram-list/table.hbs
+++ b/app/components/diagram-list/table.hbs
@@ -1,107 +1,68 @@
-<div ...attributes>
-  <AuDataTable
-    @content={{this.activeDiagrams}}
-    @fields="name created size"
-    @noDataMessage="Geen diagrammen gevonden"
-    as |row|
-  >
-    <row.content class="au-c-data-table__table--small" as |c|>
-      <c.header>
-        <th>Bestandsnaam</th>
-        <th>Toegevoegd</th>
-        <th>Grootte</th>
-        <th>Positie</th>
-        <th></th>
-        {{#if @canEdit}}<th></th>{{/if}}
-      </c.header>
-      {{#if this.diagramsHaveErrored}}
-        <TableMessage::Error />
-      {{else if this.diagramsHaveNoResults}}
-        <TableMessage>
-          <p>Er werden geen zoekresultaten gevonden.</p>
-        </TableMessage>
-      {{else}}
-        <c.body as |diagram|>
-          <td>
-            <AuButton
-              @skin="link"
-              {{on "click" (fn @onDiagramFileSelected diagram.diagramFile)}}
-            >
-              {{diagram.diagramFile.name}}
-            </AuButton>
-          </td>
-          <td>{{date-format diagram.diagramFile.created true}}</td>
-          <td>{{file-size-format diagram.diagramFile.size}}</td>
-          <td>{{diagram.position}}</td>
-          <td>
-            <AuButton
-              @icon="download"
-              @skin="link"
-              @width="block"
-              @hideText="true"
-              {{on "click" (fn (mut this.fileToDownload) diagram.diagramFile)}}
-            >Download</AuButton>
-          </td>
-          {{#if @canEdit}}
-            <td>
-              <AuButton
-                @icon="bin"
-                @skin="naked"
-                @alert="true"
-                @width="block"
-                @hideText="true"
-                {{on "click" (fn this.openDeleteModal diagram.diagramFile)}}
-              >Verwijder</AuButton>
-            </td>
-          {{/if}}
-        </c.body>
-      {{/if}}
-    </row.content>
-  </AuDataTable>
-</div>
-
-<AuModal
-  @modalOpen={{this.isDeleteModalOpen}}
-  @closeModal={{this.closeDeleteModal}}
+<AuDataTable
+  @content={{this.activeDiagrams}}
+  @fields="name created size"
+  @noDataMessage="Geen diagrammen gevonden"
+  as |row|
 >
-  <:title>Verwijder {{this.fileToDelete.name}}</:title>
-  <:body>
-    {{#unless this.canDeleteFile}}
-      <AuAlert
-        @title="Niet toegestaan"
-        @skin="warning"
-        @icon="cross"
-        @size="small"
-        @closable={{false}}
-      >
-        <p>Het laatste diagram in de lijst kan niet worden verwijderd. Vervang
-          de huidige diagram(men) om een nieuwe versie aan te maken.</p>
-      </AuAlert>
-    {{/unless}}
-    <p>
-      Ben je zeker dat je dit bestand uit de bibliotheek wil verwijderen?
-    </p>
-  </:body>
-  <:footer>
-    <AuButtonGroup class="au-u-flex--end">
-      <AuButton
-        @skin="secondary"
-        {{on "click" this.closeDeleteModal}}
-      >Annuleer</AuButton>
-      <AuButton
-        @skin="primary"
-        @icon="bin"
-        @alert="true"
-        @disabled={{not this.canDeleteFile}}
-        @loading={{this.deleteFile.isRunning}}
-        @loadingMessage="Verwijderen"
-        {{on "click" (perform this.deleteFile)}}
-      >Verwijder</AuButton>
-    </AuButtonGroup>
-  </:footer>
-</AuModal>
+  <row.content class="au-c-data-table__table--small" as |c|>
+    <c.header>
+      <th>Bestandsnaam</th>
+      <th>Toegevoegd</th>
+      <th>Grootte</th>
+      <th>Positie</th>
+      <th></th>
+      <th></th>
+    </c.header>
+    {{#if this.diagramsHaveErrored}}
+      <TableMessage::Error />
+    {{else if this.diagramsHaveNoResults}}
+      <TableMessage>
+        <p>Er werden geen zoekresultaten gevonden.</p>
+      </TableMessage>
+    {{else}}
+      <c.body as |diagram|>
+        {{! template-lint-disable no-invalid-interactive }}
+        <td
+          class="{{if
+              (eq diagram.diagramFile.id @selectedDiagramFile.id)
+              'border-left-selected'
+              'border-left-transparent'
+            }}"
+          {{on "click" (fn @onDiagramFileSelected diagram.diagramFile)}}
+        >
+          <AuButton
+            @skin="link"
+            {{on "click" (fn @onDiagramFileSelected diagram.diagramFile)}}
+          >
+            {{diagram.diagramFile.name}}
+          </AuButton>
+        </td>
+        <td>{{date-format diagram.diagramFile.created true}}</td>
+        <td>{{file-size-format diagram.diagramFile.size}}</td>
+        <td>{{diagram.position}}</td>
+        <td>
+          <AuButton
+            @skin="naked"
+            {{on "click" (fn (mut this.fileToDownload) diagram.diagramFile)}}
+          >Download
+          </AuButton>
+        </td>
+        <td>
+          <AuLink
+            @route="diagrams.diagram.index"
+            @skin="button-naked"
+            @model={{diagram.id}}
+          >
+            Detail
+          </AuLink>
+        </td>
+      </c.body>
+    {{/if}}
+  </row.content>
+</AuDataTable>
 
-<File::DownloadModal
+<File::Download
+  @showAsModal={{true}}
   @isModalOpen={{this.fileToDownload}}
   @onModalClosed={{fn (mut this.fileToDownload) undefined}}
   @onDownloadSuccesful={{this.onFileDownloadedSuccessful}}
