--- a/app/templates/processes/process/diagrams.hbs
+++ b/app/templates/processes/process/diagrams.hbs
@@ -26,7 +26,7 @@
               {{if
                 (eq this.selectedDiagramList.id diagramList.id)
                 'background-gray border-left-selected'
-                'background-white'
+                'background-white border-left-transparent'
               }}"
             style="border:1.5px solid var(--au-gray-200); "
           >
@@ -60,17 +60,10 @@
         <p>Je bent een oudere versie van de diagrammen aan het bekijken</p>
       </AuAlert>
     {{/unless}}
-    <AuToolbar @size="small" class="au-u-padding-top" as |Group|>
-      <Group />
-      <Group class="au-c-toolbar__group--actions">
-        <AuPill @icon="clock-rewind">Laatst aangepast op
-          {{date-format this.selectedDiagramList.modified true}}</AuPill>
-      </Group>
-    </AuToolbar>
-    <div class="au-o-box au-u-padding-top-none">
-      <p class="au-u-h4 au-u-medium au-u-margin-bottom">Diagrammen</p>
+    <div style="min-height:30vh">
       <DiagramList::Table
         @diagramList={{this.selectedDiagramList}}
+        @selectedDiagramFile={{this.selectedDiagramFile}}
         @onDiagramFileSelected={{this.openDiagramFile}}
         @canEdit={{this.canEditFilesInTable}}
         @canDeleteLastItem={{false}}
@@ -78,10 +71,7 @@
       />
     </div>
     <div class="au-o-box">
-      {{#if this.selectedDiagramFile}}
-        <File::Viewer @file={{this.selectedDiagramFile}} />
-        <File::MetadataCard @file={{this.selectedDiagramFile}} />
-      {{/if}}
+      <File::Viewer @file={{this.selectedDiagramFile}} />
     </div>
   </:content>
 </SidebarContainer>
