--- a/app/components/process/wizard.hbs
+++ b/app/components/process/wizard.hbs
@@ -3,8 +3,8 @@
     {{this.activeStep.title}}
   </:title>
   <:body>
-    {{#if this.uploadFileMessage}}
-      <AuLoader @centered={{true}}>{{this.uploadFileMessage}}</AuLoader>
+    {{#if this.loadingMessage}}
+      <AuLoader @centered={{true}}>{{this.loadingMessage}}</AuLoader>
     {{/if}}
     {{#if (eq this.activeStepIndex 0)}}
       <File::Dropzone
@@ -41,12 +41,14 @@
     <AuToolbar as |Group|>
       <Group />
       <Group>
-        <AuButton
-          {{on "click" this.nextStep}}
-          @disabled={{not this.activeStep.canGoToNextStep}}
-        >
-          {{this.activeStep.nextStepButtonLabel}}
-        </AuButton>
+        {{#if this.activeStep.nextStepButtonLabel}}
+          <AuButton
+            {{on "click" this.nextStep}}
+            @disabled={{not this.activeStep.canGoToNextStep}}
+          >
+            {{this.activeStep.nextStepButtonLabel}}
+          </AuButton>
+        {{/if}}
       </Group>
     </AuToolbar>
   </:footer>
