feat: create a circular loader component instead of the normal loader
Refs: oph-904

--- a/app/components/process/wizard.hbs
+++ b/app/components/process/wizard.hbs
@@ -4,7 +4,9 @@
   </:title>
   <:body>
     {{#if this.loadingMessage}}
-      <AuLoader @centered={{true}}>{{this.loadingMessage}}</AuLoader>
+      <div class="au-u-flex au-u-flex--center au-u-flex--vertical-center">
+        <Shared::Loader @message={{this.loadingMessage}} />
+      </div>
     {{/if}}
     {{#if (eq this.activeStepIndex 0)}}
       <File::Dropzone
