--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -213,3 +213,13 @@ tr:hover .inventory-row-button-group .au-c-button {
     transform: translateX(-0.5rem);
   }
 }
+
+.wizard-success-icon {
+  .au-c-icon--large {
+    width: 50px !important;
+    height: 50px !important;
+  }
+  .au-c-icon {
+    fill: var(--au-green-700) !important;
+  }
+}
