refactor: use the wizard for creating a process on the my processes page
Refs: oph-904

--- a/app/components/process/wizard.hbs
+++ b/app/components/process/wizard.hbs
@@ -1,4 +1,4 @@
-<AuModal class="process-wizard-modal" @modalOpen={{true}} @closable={{true}}>
+<AuModal class="process-wizard-modal" @modalOpen={{true}} @closable={{true}} @closeModal={{@onCloseModal}}>
   <:title>
     {{this.activeStep.title}}
   </:title>
@@ -32,7 +32,7 @@
         <AuLabel
           @required={{true}}
           class="au-u-margin-top"
-        >Hoofddiagram</AuLabel>
+        >Selecteer het hoofddiagram</AuLabel>
         <PowerSelect
           @searchEnabled={{true}}
           @searchField="name"
