--- a/app/components/process/wizard.hbs
+++ b/app/components/process/wizard.hbs
@@ -1,4 +1,9 @@
-<AuModal class="process-wizard-modal" @modalOpen={{true}} @closable={{true}} @closeModal={{@onCloseModal}}>
+<AuModal
+  class="process-wizard-modal"
+  @modalOpen={{true}}
+  @closable={{true}}
+  @closeModal={{@onCloseModal}}
+>
   <:title>
     {{this.activeStep.title}}
   </:title>
@@ -19,20 +24,20 @@
     {{/if}}
 
     {{#if (eq this.activeStepIndex 0)}}
-      <File::Dropzone
-        @multiple={{true}}
-        @accept=".bpmn,.vsdx"
-        @onFileUploaded={{this.addFileToUploadedList}}
-        @isQueueListShown={{true}}
-        @canEditFileQueue={{true}}
-      />
+      <div class="au-u-flex au-u-flex--between au-u-height-full">
+        <File::Dropzone
+          @multiple={{true}}
+          @accept=".bpmn,.vsdx"
+          @onFileUploaded={{this.addFileToUploadedList}}
+          @isQueueListShown={{true}}
+          @canEditFileQueue={{true}}
+        />
+      </div>
     {{/if}}
     {{#if (eq this.activeStepIndex 1)}}
       {{#if this.areFilesCreated}}
-        <AuLabel
-          @required={{true}}
-          class="au-u-margin-top"
-        >Selecteer het hoofddiagram</AuLabel>
+        <AuLabel @required={{true}} class="au-u-margin-top">Selecteer het
+          hoofddiagram</AuLabel>
         <PowerSelect
           @searchEnabled={{true}}
           @searchField="name"
@@ -55,6 +60,7 @@
       <Group>
         {{#if this.activeStep.nextStepButtonLabel}}
           <AuButton
+            class="border-radius"
             {{on "click" this.nextStep}}
             @disabled={{not this.activeStep.canGoToNextStep}}
           >
