--- a/app/templates/processes/process/diagrams.hbs
+++ b/app/templates/processes/process/diagrams.hbs
@@ -7,6 +7,7 @@
   <:title>Versies</:title>
   <:action>
     <AuButton
+      class="border-radius"
       @skin="primary"
       @iconAlignment="right"
       {{on "click" this.openCreateModal}}
@@ -76,21 +77,6 @@
   </:content>
 </SidebarContainer>
 
-<Process::Wizard 
-  @isModalOpen={{this.isCreateModalOpen}}
-  @closeModal={{this.closeCreateModal}}
-/>
-
-{{!-- <FileUploadModal
-  @header="Maak een nieuwe versie aan"
-  @title="BPMN- of Visiobestand selecteren"
-  @helpTextDragDrop="Bestand wordt meteen verwerkt en toegevoegd aan bibliotheek na selectie"
-  @multiple={{true}}
-  @accept=".bpmn,.vsdx"
-  @isSensitiveDataDetectInUploadFlow={{false}}
-  @updateModel={{this.addFileToProcess}}
-  @extractBpmnElements={{this.extractBpmnElements}}
-  @onFinishUpload={{this.diagramUploaded}}
-  @modalOpen={{this.isCreateModalOpen}}
-  @closeModal={{this.closeCreateModal}}
-/> --}}
+{{#if this.isCreateModalOpen}}
+  <Process::Wizard @onCloseModal={{this.closeCreateModal}} />
+{{/if}}
