feat: when process is passed on you are editing that process
Refs: oph-904

--- a/app/templates/processes/process/diagrams.hbs
+++ b/app/templates/processes/process/diagrams.hbs
@@ -78,5 +78,8 @@
 </SidebarContainer>
 
 {{#if this.isCreateModalOpen}}
-  <Process::Wizard @onCloseModal={{this.closeCreateModal}} />
+  <Process::Wizard
+    @onCloseModal={{this.closeCreateModal}}
+    @process={{@model.process}}
+  />
 {{/if}}
